Menu: reset changes, we don't need to explicitly hide horiz scrollbar, the bug from #67605 is solved by removing the firefox/ie specific "fix" (see commit ab9b9c59dbc134ba7482e1e80f329efe30ec5ae9), see #67605

--- a/src/scss/themes/fylr/components/_menu.scss
+++ b/src/scss/themes/fylr/components/_menu.scss
@@ -10,8 +10,7 @@
 	
 	// add overflow to item-list, so the layer-border applied to cui-menu will be fixed
 	> .cui-item-list {
-		overflow-x: hidden;
-		overflow-y: auto;
+		overflow: auto;
 		-webkit-overflow-scrolling: touch;
 	}
 
